--- a/.standard-commitrc.json
+++ b/.standard-commitrc.json
@@ -1,14 +1,5 @@
 {
-  "types": [
-    "feat",
-    "fix",
-    "chore",
-    "build",
-    "ci",
-    "docs",
-    "refactor",
-    "test"
-  ],
+  "types": ["feat", "fix", "chore", "build", "ci", "docs", "refactor", "test"],
   "promptScope": "suggest",
   "scopes": "staged"
 }
