--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,5 +35,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup environment
         uses: ./.github/actions/setup
+      - name: Cache Parcel build cache
+        uses: actions/cache@v2
+        with:
+          path: .parcel-cache
+          key: ${{ runner.os }}-parcel
       - name: Run Parcel
         run: pnpm build
